使用 Colab 创建而成

--- a/colab_02.ipynb
+++ b/colab_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbpjpI0SkWa8FbzfPa/QN/",
+      "authorship_tag": "ABX9TyOgmGHp7T0Y9k1tOcOkmTJx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,7 +369,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LIU2016/AI-Practice-Tensorflow-Notes/blob/master/colab_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/LIU2016/AI-Practice-Tensorflow-Notes/blob/feature-0318/colab_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -858,43 +858,48 @@
       "cell_type": "code",
       "source": [
         "from transformers import DistilBertTokenizer, DistilBertForSequenceClassification\n",
+        "import torch\n",
         "\n",
         "# 加载保存的模型和 tokenizer\n",
-        "model_path = \"./distilbert_model\"  # 模型存储路径\n",
-        "\n",
+        "model_path = \"./distilbert_model\"\n",
         "model = DistilBertForSequenceClassification.from_pretrained(model_path)\n",
         "tokenizer = DistilBertTokenizer.from_pretrained(model_path)\n",
         "\n",
+        "# 检查标签映射（关键！）\n",
+        "print(\"模型标签映射:\", model.config.id2label)  # 假设输出 {0: 'NEGATIVE', 1: 'POSITIVE'}\n",
+        "\n",
+        "# 设置设备和评估模式\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "model.to(device)\n",
+        "model.eval()\n",
+        "\n",
         "# 需要预测的新文本数据\n",
-        "new_texts = [\"I feel amazing today!\", \"This movie was awful.\"]\n",
+        "new_texts = [\"This food is so nice\"]\n",
         "\n",
-        "# 对新文本进行分词\n",
-        "inputs = tokenizer(new_texts, padding=True, truncation=True, return_tensors=\"pt\")\n",
+        "# 对新文本进行分词并移至设备\n",
+        "inputs = tokenizer(new_texts, padding=True, truncation=True, return_tensors=\"pt\", max_length=512)\n",
+        "inputs = {k: v.to(device) for k, v in inputs.items()}\n",
         "\n",
-        "# 使用模型进行推理\n",
-        "outputs = model(**inputs)\n",
+        "# 推理\n",
+        "with torch.no_grad():\n",
+        "    outputs = model(**inputs)\n",
         "\n",
-        "# 获取预测结果 (logits)\n",
-        "logits = outputs.logits\n",
+        "# 获取预测结果\n",
+        "predictions = outputs.logits.argmax(dim=-1).cpu().numpy()\n",
+        "print(f\"获取预测结果：{predictions}\")\n",
         "\n",
-        "# 获取预测的标签（选择最大值所在的索引作为预测结果）\n",
-        "predictions = logits.argmax(dim=-1)\n",
-        "\n",
-        "# 标签的含义（0: Negative, 1: Positive）\n",
-        "labels = [\"Negative\", \"Positive\"]\n",
-        "\n",
-        "# 输出对应的标签\n",
-        "predicted_labels = [labels[pred.item()] for pred in predictions]\n",
-        "print(f\"结果: {predicted_labels}\")"
+        "# 根据模型配置的标签映射输出结果（动态适配）\n",
+        "labels = [model.config.id2label[pred] for pred in predictions]\n",
+        "print(f\"预测结果: {labels}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "kl4pF0Rpn1Cy",
-        "outputId": "09dd6b2f-dd6b-4788-e9f6-3bfd917eb143"
+        "outputId": "3a6a7014-8034-42b7-eb0c-c0b38bbca3b4"
       },
-      "execution_count": 19,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +913,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "结果: ['Positive']\n"
+            "模型标签映射: {0: 'LABEL_0', 1: 'LABEL_1'}\n",
+            "获取预测结果：[1]\n",
+            "预测结果: ['LABEL_1']\n"
           ]
         }
       ]
